# app/Http/Resources/OrganizationResource.php
@@ -4,7 +4,6 @@ namespace App\Http\Resources;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
-use Illuminate\Support\Facades\Storage;
 
 class OrganizationResource extends JsonResource
 {
@@ -20,9 +19,6 @@ class OrganizationResource extends JsonResource
             'name' => $this->name,
             'code' => $this->code,
             'logo_path' => $this->logo_path,
-            'id_card_background_url' => $this->id_card_background_path
-                ? Storage::disk('public')->url($this->id_card_background_path)
-                : null,
             'is_active' => $this->is_active,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
